sidebar keep fixing to prevent jumping

--- a/_sass/my-inline.scss
+++ b/_sass/my-inline.scss
@@ -11,7 +11,7 @@
 
 .sidebar-sticky {
   position: absolute;
-  height: 95%;
+  height: 100%;
   padding-top: 5%;
 }
 
@@ -27,6 +27,10 @@
   padding: .25rem 0;
 }
 
+.sidebar-nav-subitem:last-child {
+  margin: 0 0 4px 0;
+}
+
 .list-wrapper {
   text-align: left;
   display: flex;
@@ -34,7 +38,7 @@
 
 .list-body {
   text-align: left;
-  margin: 4px;
+  margin: 0;
 }
 
 .sidebar-about {
@@ -49,7 +53,7 @@
 
 .folder {
   color: #fff;
-  font-size: x-large;
+  font-size: large;
   position: absolute;
   cursor: pointer;
   right: 30px;
